正确实现部分载具相关方法调用